feat: 完善测试类，补充压测脚本，调整application，修复openobserve